add: extract route parameters and add some debugging

--- a/server/dune
+++ b/server/dune
@@ -1,4 +1,6 @@
 (executable
  (name server)
  (public_name server)
- (libraries cohttp-lwt-unix tyxml))
+ (libraries fmt.tty cohttp-lwt-unix tyxml yojson ppx_deriving_yojson)
+ (preprocess
+  (pps ppx_deriving_yojson)))
