signup form, user model

--- a/app/dune
+++ b/app/dune
@@ -1,5 +1,3 @@
 (library
  (name app)
- (libraries cohttp-lwt-unix tyxml)
- (preprocess
-  (pps tyxml-ppx)))
+ (libraries cohttp-lwt-unix tyxml form model))
