--- a/app/dune
+++ b/app/dune
@@ -1,3 +1,5 @@
 (library
  (name app)
- (libraries cohttp-lwt-unix tyxml form model db))
+ (libraries cohttp-lwt-unix tyxml form model db)
+ (preprocess
+  (pps ppx_deriving.eq)))
