--- a/app/dune
+++ b/app/dune
@@ -1,5 +1,3 @@
 (library
  (name app)
- (libraries cohttp-lwt-unix tyxml form model db uuidm)
- (preprocess
-  (pps ppx_deriving.eq)))
+ (libraries cohttp-lwt-unix tyxml handler))
