--- a/middleware/dune
+++ b/middleware/dune
@@ -1,3 +1,3 @@
 (library
  (name middleware)
- (libraries caqti cohttp fmt.tty logs uuidm))
+ (libraries caqti cohttp cohttp-lwt-unix fmt.tty logs uuidm redis-lwt yojson))
