--- a/webapp.opam
+++ b/webapp.opam
@@ -4,11 +4,11 @@ synopsis: "A simple web app"
 maintainer: "Simon Lubega <lubegasimon73@gmail.com>"
 authors: [ "Simon Lubega <lubegasimon73@gmail.com>" ]
 license: "MIT"
-tags: ["web" "server"]
+tags: ["web" "app"]
 
-homepage: "https://github.com/lubegasimon/web-server-prototype/"
-dev-repo: "https://github.com/lubegasimon/web-server-prototype/"
-bug-reports: "https://github.com/lubegasimon/web-server-prototype/issues"
+homepage: "https://github.com/lubegasimon/web-app-prototype/"
+dev-repo: "https://github.com/lubegasimon/web-app-prototype/"
+bug-reports: "https://github.com/lubegasimon/web-app-prototype/issues"
 
 depends: [
   "ocaml" { >= "4.13.1" }
