prepare categories tbl to be referenced by expenses tbl

--- a/test/integration/category/dune
+++ b/test/integration/category/dune
@@ -1,3 +1,9 @@
+(library
+ (name category)
+ (modules helper)
+ (libraries db model alcotest-lwt))
+
 (test
  (name test)
- (libraries db model alcotest-lwt))
+ (modules test)
+ (libraries category db model alcotest-lwt))
